# somble

./: Cargo.toml
.github/workflows/: ci.yaml  release.yaml
assets/: test.ldtk
src/: consts.rs  enemy.rs  essence.rs  game_ui.rs  health.rs  hitbox.rs  hitstun.rs  homing.rs  level.rs  main.rs  main_menu.rs  player.rs  potion.rs  preload.rs  status.rs  utils.rs
wasm/: index.html
