[package]
name = "somble"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8", features = ["wayland"] }
bevy-inspector-egui = "0.12.1"
bevy_ecs_ldtk = "0.4.0"
bevy_rapier2d = "0.16.1"
fastrand = "1.8.0"
iyes_loopless = "0.7.1"
ordered-float = "3.0.0"
pathfinding = "3.0.13"
